--- a/src/components/sass/_onBoarding.scss
+++ b/src/components/sass/_onBoarding.scss
@@ -5,6 +5,7 @@
   background-color: var(--headercolor);
   color: var(--fontColor);
   min-height: 100vh;
+  max-width: 500px;
   .backButton {
     font-weight: 600;
     text-transform: uppercase;
