--- a/src/components/sass/_loadingScreen.scss
+++ b/src/components/sass/_loadingScreen.scss
@@ -24,6 +24,7 @@
       justify-content: center;
       height: 20vw;
       min-height: 150px;
+      max-height: 200px;
       width: 20vw;
       max-width: 200px;
       min-width: 150px;
