--- a/src/components/sass/_devMenu.scss
+++ b/src/components/sass/_devMenu.scss
@@ -18,6 +18,9 @@
     border-radius: 15px;
     color: white;
   }
+  .openCloseButton {
+    background-color: goldenrod;
+  }
 }
 .devMenu {
   flex-direction: row;
