--- a/src/components/sass/_onBoarding.scss
+++ b/src/components/sass/_onBoarding.scss
@@ -3,6 +3,7 @@
 
 .onBoardingSectionContainer {
   background-color: var(--headercolor);
+  border-right: 1px grey solid;
   color: var(--fontColor);
   min-height: 100vh;
   max-width: 500px;
