--- a/src/components/sass/_devMenu.scss
+++ b/src/components/sass/_devMenu.scss
@@ -56,3 +56,13 @@
 .Green {
   background-color: darkgreen;
 }
+
+@media only screen and (min-width: 625px) {
+  .devMenu {
+    right: 0;
+    left: auto;
+    height: 99vh;
+    border-left: 1px solid darkgrey;
+    z-index: 6;
+  }
+}
