--- a/src/components/sass/_onBoarding.scss
+++ b/src/components/sass/_onBoarding.scss
@@ -7,6 +7,7 @@
   color: var(--fontColor);
   min-height: 100vh;
   max-width: 500px;
+  min-width: 350px;
   .backButton {
     font-weight: 600;
     text-transform: uppercase;
@@ -18,6 +19,9 @@
     text-transform: uppercase;
     padding: 10px;
     border-radius: 15px;
+  }
+  .grey {
+    background-color: grey;
   }
   .onBoardingSectionWrapper {
     padding: 10% 15%;
@@ -34,10 +38,15 @@
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-
-      img {
+      .imgAvatar {
         height: 50px;
         width: 50px;
+        margin: 5px;
+        cursor: pointer;
+      }
+      img {
+        height: 100%;
+        width: 100%;
         margin: 3px;
         cursor: pointer;
       }
@@ -108,6 +117,7 @@
       border-radius: 25px;
       text-transform: uppercase;
       font-weight: bold;
+      cursor: pointer;
     }
 
     .clickedTagButton {
