--- a/src/components/sass/_setup.scss
+++ b/src/components/sass/_setup.scss
@@ -2,6 +2,8 @@ html {
   line-height: 1.15;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 body {
   margin: 0;
