--- a/src/components/sass/_loginSignPage.scss
+++ b/src/components/sass/_loginSignPage.scss
@@ -9,6 +9,7 @@
   min-width: 350px;
   border-right: 1px grey solid;
   position: relative;
+
   .wrapper10 {
     @include FlexColumnCenter;
     justify-content: center;
@@ -80,4 +81,12 @@
   margin-right: 15px;
   filter: invert(16%) sepia(46%) saturate(4807%) hue-rotate(358deg)
     brightness(82%) contrast(128%);
+}
+@media only screen and (min-width: 1625px) {
+  .LoginAndSignUpPageSection {
+    min-width: 500px;
+  }
+  .onBoardingSectionContainer {
+    min-width: 500px;
+  }
 }
