--- a/src/components/sass/_onBoarding.scss
+++ b/src/components/sass/_onBoarding.scss
@@ -73,6 +73,7 @@
             outline: 1px solid grey;
             padding: 15px;
             width: 100%;
+            background-color: white;
           }
           .errorForm {
             border: solid red 3px;
@@ -127,4 +128,7 @@
 }
 .selectedAvatar {
   outline: solid black 3px;
+}
+.pronounsPara {
+  margin-top: 15%;
 }
