Catching server error from database fix

--- a/src/components/sass/_loadingScreen.scss
+++ b/src/components/sass/_loadingScreen.scss
@@ -39,6 +39,7 @@
   justify-content: center;
   align-content: center;
   min-height: 100vh;
+  min-width: 350px;
   .square {
     min-height: inherit;
     @include FlexColumn;
