Css updates/onboarding upadates

--- a/src/components/sass/StyleGuide.scss
+++ b/src/components/sass/StyleGuide.scss
@@ -6,8 +6,8 @@ $fontMedium: 20px;
 $fontSmall: 14px;
 $fontButton: 12px;
 
-$fontHeadingType: Roboto, Arial, Helvetica, sans-serif;
-$fontBodyType: Roboto, Arial, Helvetica, sans-serif;
+$fontHeadingType: "Roboto", Arial, Helvetica, sans-serif;
+$fontBodyType: "Roboto", Arial, Helvetica, sans-serif;
 
 button {
   font-family: $fontBodyType;
