--- a/src/components/sass/_loginSignPage.scss
+++ b/src/components/sass/_loginSignPage.scss
@@ -8,18 +8,12 @@
   max-width: 500px;
   min-width: 350px;
   border-right: 1px grey solid;
-  position: relative;
 
   .wrapper10 {
-    @include FlexColumnCenter;
-    justify-content: center;
+    @include FlexColumn;
     padding-top: 10%;
     padding-bottom: 10%;
     min-height: inherit;
-
-    .contentContainer {
-      text-align: center;
-    }
     .loginContainers {
       width: 100%;
       margin: 10% 0;
@@ -27,17 +21,19 @@
       .buttonContainer {
         display: flex;
         justify-content: center;
-        padding: 20px;
         width: 100%;
+        margin-bottom: 30px;
         z-index: 5;
         a {
           border-radius: 15px;
-          border: solid 2px grey;
           display: flex;
           flex-wrap: nowrap;
           font-weight: 700;
-          padding: 20px 80px;
+          justify-content: center;
           text-transform: uppercase;
+          padding: 8px 0;
+          text-align: center;
+          width: 100%;
           cursor: pointer;
         }
         .signInButton {
@@ -47,6 +43,7 @@
         .logInButton {
           background-color: var(--loginButtonColor);
           color: var(--loginButtonFontColor);
+          border: solid black 2px;
         }
         .logInButton:hover,
         .signInButton:hover,
@@ -84,6 +81,23 @@
   filter: invert(16%) sepia(46%) saturate(4807%) hue-rotate(358deg)
     brightness(82%) contrast(128%);
 }
+.havenImageContainer {
+  height: 40vh;
+  outline: solid gold 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .havenImage {
+    height: 200px;
+    width: 200px;
+    color: black;
+    outline: solid red 2px;
+    background-image: url("../../../public/assets/svg/signup.svg");
+    background-repeat: no-repeat;
+    transform: rotate(30deg);
+  }
+}
+
 @media only screen and (min-width: 1625px) {
   .LoginAndSignUpPageSection {
     min-width: 500px;
