--- a/src/components/sass/_onBoarding.scss
+++ b/src/components/sass/_onBoarding.scss
@@ -9,16 +9,50 @@
   max-width: 500px;
   min-width: 350px;
   .backButton {
-    font-weight: 600;
+    display: flex;
+    flex-direction: row;
     text-transform: uppercase;
     padding: 10px;
+    font-family: $fontBodyType;
+    font-size: 12px;
+    line-height: 120%;
+    letter-spacing: 1.25px;
+
+    span {
+      display: flex;
+    }
+    .textButton {
+      order: 2;
+    }
+
+    .imageButton img {
+      transform: rotate(90deg);
+      margin-right: 5px;
+      order: 1;
+    }
   }
+
   .nextButton {
     background-color: #c0ff99;
-    font-weight: 600;
+    display: flex;
+    flex-direction: row;
     text-transform: uppercase;
-    padding: 10px;
+    padding: 8px;
     border-radius: 15px;
+    font-family: $fontBodyType;
+    font-size: 12px;
+    line-height: 120%;
+    letter-spacing: 1.25px;
+
+    span {
+      display: flex;
+    }
+
+    .imageButton img {
+      transform: rotate(-90deg);
+      margin-left: 5px;
+      height: 16px;
+    }
 
     a {
       text-decoration: none;
@@ -70,7 +104,7 @@
 
     .middleContent,
     .onBoardingContent {
-      form {
+      .textForm {
         @include FlexColumn;
         justify-content: space-evenly;
         .labelsEmail {
@@ -105,15 +139,54 @@
           @include LightGreen;
           border-radius: 15px;
           border: none;
-          font-weight: 600px;
+          font-size: 12px;
+          font-weight: bolder;
+          letter-spacing: 1.25px;
           margin-top: 40px;
-          outline: 1px solid grey;
-          padding: 15px;
+          padding: 8px;
           text-transform: uppercase;
+        }
+      }
+      .birthdayForm {
+        @include FlexColumn;
+
+        .birthdayFormInputContainer {
+          @include FlexRow;
+          justify-content: space-between;
+        }
+        .labelsEmail {
+          @include FlexColumn;
+          label {
+            font-weight: bold;
+            margin-bottom: 10px;
+          }
+
+          input {
+            border: none;
+            border-radius: 15px;
+            padding: 10px;
+            max-width: 75px;
+            background-color: rgb(243, 240, 240);
+          }
+        }
+        button {
+          margin-top: 30px;
+          width: 100px;
+          border: none;
+          padding: 10px;
+          border-radius: 15px;
+          align-self: center;
         }
       }
     }
   }
+}
+
+.agePara {
+  margin-top: 20px;
+}
+.paraAccount {
+  margin-top: 20px;
 }
 .interestsContainer {
   margin-top: 10%;
@@ -122,15 +195,16 @@
     flex-wrap: wrap;
     @include FlexRowCenter;
     @include UlNormalize;
-    justify-content: space-between;
+    justify-content: flex-start;
 
     .interestButtons {
-      padding: 15px;
-      border: none;
-      margin: 5px;
+      padding: 10px;
+      border: solid black 2px;
+      margin: 4px;
       border-radius: 25px;
-      text-transform: uppercase;
+      font-size: 12px;
       font-weight: bold;
+      letter-spacing: 1.25px;
       cursor: pointer;
     }
 
@@ -144,4 +218,33 @@
 }
 .pronounsPara {
   margin-top: 15%;
+}
+.checkboxContainer {
+  margin: 10px;
+}
+.questionForm {
+  display: flex;
+  flex-direction: column;
+  height: 25vh;
+  outline: solid black 3px;
+  border-radius: 15px;
+  padding: 5%;
+  background-color: rgb(242, 248, 244);
+
+  textarea {
+    min-height: 50%;
+    border: none;
+    background-color: rgb(242, 248, 244);
+  }
+
+  .submit {
+    background-color: white;
+    border-radius: 15px;
+    border: none;
+    border: solid green 3px;
+    height: 32px;
+    width: 100px;
+    margin-top: 5%;
+    align-self: flex-end;
+  }
 }
