--- a/src/components/sass/_progressBar.scss
+++ b/src/components/sass/_progressBar.scss
@@ -10,13 +10,13 @@
     height: 8px;
     width: 8px;
   }
-}
 
-.grey {
-  background-color: grey;
-  border-radius: 90%;
+  .grey {
+    background-color: #1f3023;
+    border-radius: 90%;
+  }
 }
 
 .green {
-  background-color: #66ffa6;
+  background-color: #86b26b;
 }
