--- a/src/components/sass/_nav.scss
+++ b/src/components/sass/_nav.scss
@@ -6,6 +6,30 @@
   background-color: #1f3023;
   color: white;
   justify-content: space-between;
-  padding: 5%;
+  padding: 4% 5%;
   width: 100%;
+  position: fixed;
+
+  .havenTitleNav {
+    font-family: Archivo;
+    font-size: 20px;
+    color: #c3e8bd;
+  }
+  .userSettings {
+    display: flex;
+    flex-direction: row;
+    width: 25%;
+    justify-content: space-between;
+
+    .profilePicture {
+      height: 15px;
+      width: 15px;
+      filter: invert(93%) sepia(12%) saturate(597%) hue-rotate(58deg)
+        brightness(96%) contrast(90%);
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
 }
