--- a/src/components/sass/_loginSignPage.scss
+++ b/src/components/sass/_loginSignPage.scss
@@ -5,24 +5,41 @@
   min-height: 100vh;
   background-color: var(--headercolor);
   color: var(--fontColor);
+  background-image: url("../../../public/assets/landingPage/landing.png");
   max-width: 500px;
   min-width: 350px;
   border-right: 1px grey solid;
 
-  .wrapper10 {
+  .Logo {
+    padding: 2%;
+    width: 100%;
+    font-family: Archivo;
+    font-weight: 500;
+  }
+
+  .wrapper5 {
     @include FlexColumn;
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 5%;
+    padding-bottom: 35%;
     min-height: inherit;
+    align-content: center;
+    justify-content: center;
 
     h1 {
-      font-size: 34px;
+      font-size: 64px;
       letter-spacing: 0.25px;
-      .h1TitleEmphasis {
-        color: #1f3023;
-        font-family: Archivo;
-        font-size: 40px;
-      }
+      text-align: center;
+      color: #c3e8bd;
+      font-family: Archivo;
+      stroke: black;
+      stroke-width: 2px;
+      -webkit-text-stroke: 2px black;
+    }
+    p {
+      text-align: center;
+      font-size: 20px;
+      padding: 0 5%;
+      display: flex;
     }
     .loginContainers {
       width: 100%;
@@ -35,17 +52,16 @@
         margin-bottom: 30px;
         z-index: 5;
         a {
-          border-radius: 15px;
           display: flex;
           flex-wrap: nowrap;
           font-weight: 500;
           letter-spacing: 1.25px;
           font-size: 12px;
           justify-content: center;
-          text-transform: uppercase;
+          text-transform: lowercase;
           padding: 8px 0;
           text-align: center;
-          width: 100%;
+          width: 230px;
           cursor: pointer;
         }
         .signInButton {
