--- a/src/components/sass/_profileCard.scss
+++ b/src/components/sass/_profileCard.scss
@@ -15,7 +15,6 @@
   .profileCardUpper {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
 
     h3 {
       font-family: "Roboto";
@@ -44,7 +43,7 @@
       .userdataPronounsLocation {
         display: flex;
         flex-wrap: wrap;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-between;
 
         p {
@@ -85,5 +84,29 @@
   img {
     width: 60px;
     height: 60px;
+  }
+}
+.myProfileItemContainer {
+  width: 100%;
+  padding: 5% 10%;
+
+  h2 {
+    border-bottom: solid black 2px;
+    width: 100%;
+    padding-bottom: 2%;
+  }
+}
+.havenLogoContainer {
+  font-family: Archivo;
+  font-size: 20px;
+  font-weight: 900;
+}
+.imageContainer {
+  width: 60px;
+  height: 60px;
+
+  img {
+    width: 100%;
+    height: 100%;
   }
 }
