--- a/src/components/sass/_onBoarding.scss
+++ b/src/components/sass/_onBoarding.scss
@@ -9,14 +9,14 @@
   max-width: 500px;
   min-width: 350px;
   justify-content: space-between;
-  padding-bottom: 5%;
 
   .onBoardingUpperContent {
     display: flex;
     flex-direction: row;
-    width: 100%;
-    padding: 0 15%;
     justify-content: space-between;
+    position: fixed;
+    width: 80%;
+    bottom: 12%;
     .backButton {
       display: flex;
       flex-direction: row;
@@ -90,21 +90,23 @@
     text-transform: uppercase;
     font-size: 10px;
     width: 100%;
-    text-align: center;
+    margin: 15px 0;
+    margin-bottom: 0;
   }
   .grey {
     background-color: #dedede;
   }
   .onBoardingSectionWrapper {
-    padding: 5% 15%;
+    @include FlexColumn;
+    padding: 2% 10%;
+    padding-bottom: 5%;
+    height: 100%;
     width: 100%;
+    justify-content: space-between;
 
     .onBoardingUpperContent {
-      align-items: center;
-      display: flex;
-      flex-direction: row;
+      @include FlexRowCenter;
       justify-content: space-between;
-      width: 100%;
     }
     .Avatars {
       display: flex;
@@ -140,19 +142,22 @@
         .labelsEmail {
           @include FlexColumn;
           label {
-            font-weight: bold;
-            padding: 15px 0;
+            padding: 3% 0;
           }
 
           input {
             background: #f2f8f4;
             border: none;
             border-radius: 15px;
-            color: grey;
+            color: black;
             height: 40px;
-            outline: 1px solid black;
+            outline: 2px solid black;
             padding: 10px;
             width: 100%;
+          }
+
+          input::placeholder {
+            color: slategray;
           }
           .errorForm {
             border: solid red 3px;
@@ -163,8 +168,11 @@
             color: darkgreen;
           }
           .inputSelectedByUser {
-            background-color: #c0ff99;
-            outline: 2px solid green;
+            background-color: lightgrey;
+            outline: 2px solid grey;
+          }
+          .inputSelectedByUser::placeholder {
+            color: black;
           }
         }
         button {
@@ -191,7 +199,6 @@
         .labelsEmail {
           @include FlexColumn;
           label {
-            font-weight: bold;
             margin-bottom: 10px;
           }
 
@@ -216,6 +223,15 @@
   }
 }
 
+.birthdayBackground {
+  background-image: url("../../../public/assets/backgrounds/ballon.png");
+  background-repeat: no-repeat;
+  background-position: bottom;
+}
+.heartBackground {
+  background-image: url("../../../public/assets/backgrounds/heart.png");
+  background-repeat: no-repeat;
+}
 .agePara {
   margin-top: 20px;
 }
@@ -232,21 +248,64 @@
 
     .interestButtons {
       padding: 10px;
-      border: solid black 2px;
       margin: 4px;
       border-radius: 25px;
       font-size: 14px;
       font-family: Roboto;
       letter-spacing: 0.25px;
       cursor: pointer;
+      border: 2px solid transparent;
+    }
+
+    .darkblueOrchid {
+      background: linear-gradient(white, white) padding-box,
+        linear-gradient(to right, darkblue, darkorchid) border-box;
+    }
+
+    .aqua {
+      background: linear-gradient(white, white) padding-box,
+        linear-gradient(to right, #0ed2f7, #b2fefa) border-box;
+    }
+
+    .orangeYellow {
+      background: linear-gradient(white, white) padding-box,
+        linear-gradient(to right, #ff75c3, #faff00) border-box;
+    }
+
+    .redBlue {
+      background: linear-gradient(white, white) padding-box,
+        linear-gradient(to right, #ff0000, #0971ad) border-box;
+    }
+
+    .samlonPink {
+      background: linear-gradient(white, white) padding-box,
+        linear-gradient(to right, #1efadf, #acf42d) border-box;
     }
 
     .clickedTagButton {
-      background-color: #fee079;
+      background: linear-gradient(#fee079, #fee079) padding-box;
     }
   }
 }
+.cardSelectedBox {
+  background-color: white;
+  position: relative;
+  padding: 20px;
+  margin-bottom: 10%;
+  border: dotted black 2px;
 
+  button {
+    position: absolute;
+    top: -10px;
+    right: -5px;
+    border: none;
+    background-color: black;
+    color: white;
+    width: 25px;
+    height: 25px;
+    border-radius: 90%;
+  }
+}
 .pronounsPara {
   font-size: 10px;
   margin-top: 5%;
@@ -261,26 +320,55 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  outline: solid black 3px;
+  outline: solid grey 1px;
   border-radius: 15px;
   padding: 5%;
   margin-bottom: 10%;
-  background-color: rgb(242, 248, 244);
+  background-color: white;
 
   textarea {
     min-height: 50%;
     border: none;
-    background-color: rgb(242, 248, 244);
+    background-color: white;
   }
 
   .submit {
-    background-color: white;
-    border-radius: 15px;
+    background-color: #60725d;
     border: none;
-    border: solid green 3px;
-    height: 32px;
+    color: white;
+    padding: 10px;
     width: 100px;
     margin-top: 5%;
     align-self: flex-end;
   }
+}
+
+@media only screen and (min-width: 625px) {
+  .momentsSubmitMyProfile {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    @include UlNormalize;
+    align-content: center;
+    justify-content: center;
+
+    .questionForm {
+      max-width: 500px;
+      min-width: 400px;
+      max-height: 300px;
+      min-height: 300px;
+      margin: 2%;
+      padding: 1%;
+      margin-bottom: 2%;
+    }
+  }
+
+  .myPastMoments {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+.havenh2pTag {
+  margin: 0;
 }
