--- a/src/components/sass/_onBoarding.scss
+++ b/src/components/sass/_onBoarding.scss
@@ -326,6 +326,17 @@
   margin-bottom: 10%;
   background-color: white;
 
+  .imageContainer {
+    width: 100%;
+    height: 170px;
+    margin-bottom: 20px;
+
+    img {
+      height: 100%;
+      width: 100%;
+    }
+  }
+
   textarea {
     min-height: 50%;
     border: none;
