--- a/src/components/sass/_loginSignPage.scss
+++ b/src/components/sass/_loginSignPage.scss
@@ -26,20 +26,20 @@
     justify-content: center;
 
     h1 {
-      font-size: 64px;
+      font-size: 78px;
       letter-spacing: 0.25px;
       text-align: center;
       color: #c3e8bd;
       font-family: Archivo;
       stroke: black;
-      stroke-width: 2px;
-      -webkit-text-stroke: 2px black;
+      stroke-width: 1px;
+      -webkit-text-stroke: 1px black;
     }
     p {
-      text-align: center;
-      font-size: 20px;
-      padding: 0 5%;
+      font-size: 16px;
+      padding: 0 15%;
       display: flex;
+      font-weight: 700;
     }
     .loginContainers {
       width: 100%;
