--- a/src/components/sass/_loginSignPage.scss
+++ b/src/components/sass/_loginSignPage.scss
@@ -99,15 +99,16 @@
   color: red;
 }
 .errorIcon {
-  background-image: url("../../../public/assets/svg/error.svg");
-  background-repeat: no-repeat;
-  color: white;
   height: 18px;
   width: 25px;
   display: block;
   margin-right: 15px;
   filter: invert(16%) sepia(46%) saturate(4807%) hue-rotate(358deg)
     brightness(82%) contrast(128%);
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 .havenImageContainer {
   height: 30vh;
