--- a/src/components/sass/_profileCard.scss
+++ b/src/components/sass/_profileCard.scss
@@ -12,6 +12,10 @@
   cursor: pointer;
   margin-bottom: 5%;
 
+  .momentItem {
+    padding: 10px;
+  }
+
   .profileCardUpper {
     display: flex;
     flex-direction: row;
@@ -61,16 +65,6 @@
       display: flex;
       justify-content: flex-start;
       flex-wrap: wrap;
-
-      p {
-        background-color: #12fba4;
-        stroke: Linear Gradient #03b9e9 0% #dbe07f 100%;
-        stroke-width: 2px;
-        font-weight: 700;
-        border-radius: 15px;
-        padding: 4px 8px 4px 8px;
-        margin-right: 3%;
-      }
     }
   }
   .profileCardBottom {
@@ -94,6 +88,21 @@
     border-bottom: solid black 2px;
     width: 100%;
     padding-bottom: 2%;
+  }
+  .interestTags {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .interestTag {
+    background-color: #12fba4;
+    stroke: Linear Gradient #03b9e9 0% #dbe07f 100%;
+    stroke-width: 2px;
+    font-weight: 700;
+    border-radius: 15px;
+    padding: 4px 8px 4px 8px;
+    margin-right: 3%;
   }
 }
 .havenLogoContainer {
